[package]
name = "libh3"
version = "0.1.8"
authors = ["Rusty Conover <rusty@conover.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rustyconover/libh3.git"
description = "Safe Rust Bindings to Uber's Hexagonal Hierarchical Spatial Index - H3"

[dependencies]
libh3-sys = "0.1.3"
float-cmp = "0.6.0"
